<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nicolasrodriguez.hermes.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="114dp"
        android:layout_alignTop="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:onClick="LineasDeColectivo"
        android:text="@string/botonLineas"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="114dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txt_number1"
        android:layout_marginBottom="18dp"
        android:onClick="Alarmas"
        android:text="@string/botonAlarma"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="24sp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="134dp"
        android:layout_height="63dp"
        android:layout_alignEnd="@+id/boton_sumar"
        android:layout_alignTop="@+id/textView"
        android:text="@string/botonAcercaDeNosotros"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_number1"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_number2"
        android:layout_alignStart="@+id/textView"
        android:ems="10"
        android:hint="@string/primerNumero"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_resultado"
        android:layout_alignEnd="@+id/txt_number1"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/segundoNumero"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number1" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="217dp"
        android:layout_height="58dp"
        android:layout_alignStart="@+id/spinner"
        android:layout_alignTop="@+id/boton_sumar"
        android:gravity="center_vertical"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:layout_above="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_sumar" />

    <Button
        android:id="@+id/boton_sumar"
        android:layout_width="112dp"
        android:layout_height="63dp"
        android:layout_alignEnd="@+id/spinner"
        android:layout_centerVertical="true"
        android:onClick="Sumar"
        android:text="@string/botonSumar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number2" />

</RelativeLayout>
