<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nicolasrodriguez.hermes.Prueba">

    <Button
        android:id="@+id/boton_sumar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/txt_resultado"
        android:layout_marginStart="24dp"
        android:onClick="Sumar"
        android:text="@string/botonSumar"
        android:textSize="24sp"
        android:textStyle="italic"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="249dp" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="22dp"
        android:gravity="center_vertical"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/boton_sumar"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/primerNumero"
        android:inputType="number" />

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_number1"
        android:layout_below="@+id/txt_number1"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/segundoNumero"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_number2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />
</RelativeLayout>
